@@ -144,8 +144,6 @@ static int		get_dirlist	(CalcHandle* handle, TNode** vars, TNode** apps)
 		tifiles_transcode_varname(handle->model, utf8, ve->name, ve->type);
 		sprintf(update->text, _("Reading of '%s'"), utf8);
 		update_label();
-		if (update->cancel)
-			return ERR_ABORT;
 	}
 
 	return 0;
@@ -457,8 +455,6 @@ static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filenam
 
 			handle->updat->cnt1 = j;
 			handle->updat->pbar();
-			if (handle->updat->cancel)
-				return -1;
 		}
 		b = 1;
 
@@ -472,8 +468,6 @@ static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filenam
 
 		handle->updat->cnt2 = i;
 		update->pbar();
-		if (handle->updat->cancel)
-		  return -1;
 
 		elapsed = (long) difftime(time(NULL), start);
 		estimated = (long) (elapsed * (float) (ROMSIZE) / i);
